--- a/icu/branches/srl/11023layoutexCMAKE/source/layoutex/Makefile.in
+++ b/icu/branches/srl/11023layoutexCMAKE/source/layoutex/Makefile.in
@@ -53,7 +53,7 @@ CFLAGS += $(LIBCFLAGS)
 CXXFLAGS += $(LIBCXXFLAGS)
 
 CPPFLAGS += -I$(srcdir) -I$(srcdir)/unicode -I$(srcdir)/.. -I$(top_srcdir)/common $(LIBCPPFLAGS)
-DEFS += -DU_LAYOUTEX_IMPLEMENTATION
+DEFS += -DU_LAYOUTEX_IMPLEMENTATION -DU_LAYOUTEX_HAVE_COMMON
 LDFLAGS += $(LDFLAGSICULX)
 LIBS = $(LIBICUUC) $(LIBICULE) $(DEFAULT_LIBS)
 
